fixed delete button alignment #40

--- a/treasury/src/app/movie-list/movie-list.component.scss
+++ b/treasury/src/app/movie-list/movie-list.component.scss
@@ -25,6 +25,7 @@
 
       button {
         @include mdc-button-filled-accessible($color-red);
+        margin-top: 7em;
       }
     }
 
